k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
  type: LoadBalancer
  ports:
    - name: api-service
      port: 80
      targetPort: 3333
      protocol: TCP
